# mediation

./: .gitignore  docker-compose.yml  pyproject.toml
apps/about/: admin.py  apps.py  models.py  translation.py  urls.py  views.py
apps/about/migrations/: 0001_initial.py  0002_page_content_en_page_content_uk_page_title_en_and_more.py
apps/cases/: admin.py  apps.py  models.py  urls.py  views.py
apps/cases/migrations/: 0001_initial.py  0002_alter_case_mediator.py
apps/classifiers/: admin.py  apps.py  models.py  translation.py
apps/classifiers/migrations/: 0001_initial.py  0002_specialization_alter_speciality_options_and_more.py  0003_professionaldirections.py  0004_remove_educationalcourse_educational_institution.py  0005_alter_educationalcourse_options_and_more.py  0006_educationalcourse_weight_and_more.py  0007_alter_language_options_and_more.py  0009_alter_professionaldirections_options.py  (+4 more)
apps/common/: models.py
apps/contacts/: admin.py  apps.py  forms.py  models.py  translation.py  urls.py  views.py
apps/registry/: admin.py  apps.py  dataclasses.py  forms.py  models.py  services.py  signals.py  translation.py  urls.py  views.py
apps/resources/: admin.py  apps.py  models.py  services.py  translation.py  urls.py  views.py
apps/users/: admin.py  managers.py  models.py
assets/css/: custom.css  vendor.summernoteeditor.css
assets/js/: profile_statistics.js
core/: settings.py  urls.py
core/templatetags/: custom_tags.py
templates/: base.html
templates/_partials/: footer.html  header.html  languages.html
templates/reversion/: revision_form.html
(+63 files in other folders)
